<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_game">Start game!</string>
    <string name="enter_name_of_player_2">Enter name of Player 2</string>
    <string name="what_is_the_name_of_player2">What is the name of Player2?</string>
    <string name="enter_name_of_player_1">Enter name of Player 1</string>
    <string name="what_is_the_name_of_player1">What is the name of Player1?</string>
    <string name="back">Back</string>
    <string name="score">Score</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
</resources>