<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:backgroundTint="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:backgroundTint="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:backgroundTint="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:backgroundTint="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:backgroundTint="?attr/colorPrimary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>